header css folder

--- a/src/list-grid-view-button.css
+++ b/src/list-grid-view-button.css
@@ -1,3 +1,4 @@
+/*
 .notes__container {
   --grid-cols: 1;
 
@@ -16,3 +17,4 @@
 .layout__toggle__button[data-view="grid"] [data-icon="list"] {
   display: none;
 }
+*/
