--- a/src/css/header-css/Light-Dark-mode-toggle.css
+++ b/src/css/header-css/Light-Dark-mode-toggle.css
@@ -1,8 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
 /* CSS variables*/
 :root {
     --text-color: #000;
@@ -28,48 +23,19 @@ body.dark-mode {
     --filterimage: var(--dark-mode-filterimage);
 }
 
-/* General styles */
-aside {
-    width: 25%;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
-img {
-    width: 35px;
-    filter: invert(var(--filterimage));
-}
-
-header {
-    height: 80px;
-}
-
-section {
-    width: 70%;
-    margin-left: 30%;
-}
-
-.card {
-    position: absolute;
-    width: 300px;
-    height: auto;
-    margin: 30px;
-    padding: 15px;
-    border: solid 1px var(--border-color);
-    border-radius: 10px;
-}
-
-.home-navigation {
-    background-color: var(--background-card);
-}
-
 /* Slider styles */
+.switch-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 .switch {
     position: absolute;
-    right: 0;
+    right: 0.5em;
     width: 63px;
     height: 34px;
-    margin: 30px;
 }
 
 .switch input {
@@ -87,6 +53,10 @@ section {
     border-radius: 34px;
     background-color: var(--slider-background);
     transition: 0.4s;
+}
+
+.slider:hover {
+    cursor: pointer;
 }
 
 .slider:before {
