--- a/src/css/header-css/dummy-search-bar.css
+++ b/src/css/header-css/dummy-search-bar.css
@@ -12,6 +12,16 @@
     box-shadow: rgba(65, 69, 73, 0.3) 0px 1px 1px 0px, rgba(65, 69, 73, 0.15) 0px 1px 3px 1px;
   }
 
+  .dark-mode .form {
+    background-color: #525355;
+    color: white;
+  }
+
+  .dark-mode .form:focus-within {
+    background-color: white;
+    box-shadow: rgba(65, 69, 73, 0.3) 0px 1px 1px 0px, rgba(65, 69, 73, 0.15) 0px 1px 3px 1px;
+  }
+
   .form__input {
     height: 100%;
 
@@ -27,6 +37,14 @@
     padding: 10px;
   }
 
+  .dark-mode .form__input::placeholder {
+    color: white;
+  }
+
+  .dark-mode .form__input:focus-within::placeholder {
+    color: #61656b;
+  }
+
   .form__button {
     border-radius: 50%;
     color: #61656b;
@@ -40,6 +58,23 @@
     background-color: #e3e5e6;
     cursor: pointer;
   }
+
+  .form:focus-within .form__button {
+    color: #61656b;
+  }
+  
+  .form:focus-within .form__button:hover {
+    background-color: #e3e5e6;
+  }
+
+  .dark-mode .form__button {
+    color: white;
+  }
+
+  .dark-mode .form__button:hover {
+    background-color: #5e5e61;
+  }
+
   
 @media (max-width: 576px) {
     .form {
