--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,22 +18,8 @@
     }
 }
 
-.header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 5fr 1fr 1fr;
-    gap: 3rem;
-}
-
-.header__home {
-    border: none;
-    background-color: inherit;
-}
-
-.header__menu{
-    font-size: 24px;
-    cursor: pointer;
-    border: none;
-    background: none;
+main {
+    margin-top: 4rem;
 }
 
 .sidebar {
